# TpmWrapperFull

./: .gitignore  API_VERIFICATION.md  BACKEND_ISSUE.md  BUILD_FILES_CHECKLIST.md  CMakeLists.txt  ORGANIZATION_SUMMARY.md  README.md  README_WINDOWS.md  WINDOWS_BUILD.md  WINDOWS_COMPATIBILITY_REVIEW.md  build.bat  build.sh  test_attestation.c  test_ek.c  test_server.sh  test_server_direct.c
docs/: CURSOR_VS_ENV_SETUP.md  PROJECT_ORGANIZATION.md  TPM2_ACTIVATECREDENTIAL_CODE.md  VS_BUILD_TOOLS_SETUP.md  WINDOWS_BUILD.md  WINDOWS_TESTING.md
scripts/: README.md  setup_vs_env.ps1  start_swtpm.sh  test_client.sh
src/: base64.c  base64.h  ek_cert_gen.c  ek_cert_gen.h  http_client.c  http_client.h  json_utils.c  json_utils.h  logger.c  logger.h  main.c  platform_tpm.c  platform_tpm.h  tpm_wrapper.c  tpm_wrapper.h
